<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registrator</string>
    <string name="title_activity">Registrator</string>
    <string name="title_species">Color:</string>
    <string name="title_number">Number:</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_latitude">Latitude: </string>
    <string name="title_longitude">Longitude: </string>
    <string name="title_submit">Save</string>
    <string name="message_GPS">Check GPS settings</string>
    <string name="title_start">Start</string>
    <string name="title_end">Stop</string>
    <string name="title_activity_start">Registrator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registrator">RegistratorActivity</string>
    <string name="menu_settings">Settings</string>

    <string name="message_confirm">Are you sure you want to do it?</string>
    <string name="alert_save">Save data</string>
    <string name="alert_end">End registration</string>
    <string name="message_saved">Your data is successfully saved</string>
    
    <string name="catchy_title">Crow registrator</string>
    <string name="catchy_subtitle">Count your crows</string>
    
    <string name="title_email">Email</string>
    <string name="message_notify">Crow encounter notification</string>
    
    <string name="array_item_1">White crow</string>
    <string name="array_item_2">Black crow</string>
    <string name="array_item_3">Black raven</string>
</resources>