<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >
        <RadioButton
            android:id="@+id/radio_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="5dp"
            android:layout_toRightOf="@id/radio_gps">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_latitude"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/label_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_longitude"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/label_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>

    </RelativeLayout>
    <Button
        android:id="@+id/button_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_end"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_below="@id/grid"
        android:layout_above="@id/button_end">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_species" />

            <ListView
                android:id="@+id/species_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:listSelector="@android:color/holo_orange_light"
                android:fadeScrollbars="false"
                android:background="@drawable/border"
                android:layout_weight="1"></ListView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/title_number" />
                    <NumberPicker
                        android:id="@+id/number_adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        ></NumberPicker>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
